Fixes menu so Occupational therapy menu item isn't obscured by logo on smaller screens

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -175,7 +175,7 @@ a.appointment-btn:hover { background: #47b7e9; }
 .nav a {
 	display: block;
 	height: 57px;
-	padding: 16px 23px 0 31px;
+	padding: 16px 10px 0 10px;
 	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
 	color: #fff;
